manifest/controller.yml
kind: Deployment 
apiVersion: extensions/v1beta1
metadata:
  namespace: gitlab 
  name: blueocean-controller
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: blueocean
    spec:
      containers:
        - name: proxy 
          image: nginx:stable 
          ports:
            - containerPort: 6443 
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx
        - name: blueocean
          image: 192.168.100.166:5000/blueocean:v1 
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: host-time
              mountPath: /etc/localtime
              readOnly: true
            - mountPath: /var/run/docker.sock
              name: docker-socket
              readOnly: true
            #- mountPath: /bin/docker
             # name: docker-binary
              #readOnly: true
            - mountPath: /bin/kubectl
              name: kubectl-binary
              readOnly: true
            - mountPath: /root/.kube 
              name: kubectl-dir
            - name: blueocean 
              mountPath: "/var/jenkins_home"
      volumes:
        - name: host-time
          hostPath:
            path: /etc/localtime
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
        #- name: docker-binary
         # hostPath:
          #  path: /usr/local/bin/docker
        - name: kubectl-binary
          hostPath:
            path: /usr/local/bin/kubectl
        - name: kubectl-dir
          hostPath:
            path: /root/.kube
        - name: blueocean 
          persistentVolumeClaim:
            claimName: blueocean-claim 
        - name: nginx-conf
          configMap:
            name: nginx-conf
