manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: gitlab 
  labels:
    proxy: blueocean
  name: blueocean
spec:
  type: ClusterIP
  ports:
  - name: http 
    port: 80 
    targetPort: 8080
  selector:
    component: blueocean
